--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,4 +27,4 @@ cc = "1.0"
 plotters = { version="0.3", default_features=false, features=["chrono", "area_series"] }
 iced = { version="0.3", features=["canvas", "tokio"] }
 chrono = { version="0.4", default-features=false }
-sysinfo = "0.19"
+sysinfo = { version="0.19", default_features=false }
