--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,8 +24,13 @@ jobs:
          toolchain: ${{ matrix.rust }}
          components: rustfmt
          override: true
-    #- name: Install build deps
-    #  run: sudo apt-get install gperf libfreetype-dev libX11 libXcursor libXrandr libXi
+    - name: Install dependencies
+      run: |
+             if [ "$RUNNER_OS" == "Linux" ]; then
+                 sudo apt-get -qq update
+                 sudo apt-get install -y libxkbcommon-dev
+             fi
+      shell: bash
     - name: Verify versions
       run: rustc --version && rustup --version && cargo --version
     - name: Cargo Build
