--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ iced_graphics = { version="0.2", features=["canvas"] }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 iced_web = "0.4"
 dodrio = "0.2"
-web-sys = { verion="0.3", features=[] }
+web-sys = { version="0.3", features=["Window", "Document", "Element", "HtmlElement", "DomRect"] }
 wasm-bindgen = "0.2.69" #align with iced_web
 
 [build-dependencies]
@@ -42,6 +42,3 @@ chrono = { version="0.4", default-features=false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 sysinfo = { version="0.19", default_features=false }
-
-[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-web-sys = { verion="0.3", features=["Window", "Document", "Element", "HtmlElement", "DomRect"] }
