--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ iced_web = "0.4"
 dodrio = "0.2"
 web-sys = { version="0.3", features=["Window", "Document", "Element", "HtmlElement", "DomRect"] }
 wasm-bindgen = "0.2.69" #align with iced_web
+lru = "0.6"
 
 [build-dependencies]
 cc = "1.0"
