--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,35 +14,41 @@ authors = ["Joylei <leingliu@gmail.com>"]
 resolver = "2"
 
 [dependencies]
-plotters = { version="0.3", default_features=false }
+plotters = { version = "0.3", default_features = false }
 plotters-backend = "0.3"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 num-traits = "0.2"
 libc = "0.2"
 iced_native = "0.4"
-iced_graphics = { version="0.2", features=["canvas"] }
+iced_graphics = { version = "0.2", features = ["canvas"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 iced_web = "0.4"
 dodrio = "0.2"
-web-sys = { version="0.3", features=["Window", "Document", "Element", "HtmlElement", "DomRect"] }
+web-sys = { version = "0.3", features = [
+    "Window",
+    "Document",
+    "Element",
+    "HtmlElement",
+    "DomRect",
+] }
 wasm-bindgen = "0.2.69" #align with iced_web
-js-sys="0.3"
+js-sys = "0.3"
 lru = "0.7"
 
 [build-dependencies]
 cc = "1.0"
 
 [dev-dependencies]
-plotters = { version="0.3", default_features=false, features=[
+plotters = { version = "0.3", default_features = false, features = [
     "chrono",
     "area_series",
     "line_series",
     "point_series",
 ] }
-iced = { version="0.3", features=["canvas", "tokio"] }
-chrono = { version="0.4", default-features=false }
+iced = { version = "0.3", features = ["canvas", "tokio"] }
+chrono = { version = "0.4", default-features = false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-sysinfo = { version="0.21", default_features=false }
+sysinfo = { version = "0.22", default_features = false }
