Add an example of listening for mouse events
Signed-off-by: Michael X. Grey <grey@openrobotics.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ plotters = { version="0.3", default_features=false, features=[
     "chrono",
     "area_series",
     "line_series",
+    "point_series",
 ] }
 iced = { version="0.3", features=["canvas", "tokio"] }
 chrono = { version="0.4", default-features=false }
