--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ description = "Iced backend for Plotters"
 readme = "README.md"
 license = "MIT"
 edition = "2021"
+resolver = "2"
 homepage = "https://github.com/Joylei/plotters-iced"
 repository = "https://github.com/Joylei/plotters-iced.git"
 documentation = "https://docs.rs/crate/plotters-iced/"
