--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ plotters = { version = "0.3", default_features = false }
 plotters-backend = "0.3"
 iced_native = "0.5"
 iced_graphics = { version = "0.3", features = ["canvas"] }
+iced = { version = "0.4.2", features = ["pure"], default_features = false, optional = true }
+iced_pure = { version = "0.2.2", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 num-traits = "0.2"
@@ -36,8 +38,13 @@ plotters = { version = "0.3", default_features = false, features = [
     "line_series",
     "point_series",
 ] }
-iced = { version = "0.4", features = ["canvas", "tokio"] }
+iced = { version = "0.4.2", features = ["canvas", "tokio", "pure"] }
 chrono = { version = "0.4", default-features = false }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 sysinfo = { version = "0.23", default_features = false }
+
+[features]
+default = ["native"]
+pure = ["iced", "iced_pure"]
+native = []
