--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,6 @@ default = ["native"]
 pure = ["iced_pure", "iced/pure"]
 native = []
 
-[dev-dependencies.plotters-iced]
-path = "."
-version = "0.3"
-features = ["pure"]
+[[example]]
+name = "pure_example"
+required-features = ["pure"]
