--- a/examples/split-chart/Cargo.toml
+++ b/examples/split-chart/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 publish = false
 
 [dependencies]
-iced = { version = "0.4", features = ["canvas", "tokio"] }
+iced = { version = "0.4", features = [
+    "canvas",
+    "tokio",
+], git = "https://github.com/iced-rs/iced.git" }
 plotters-iced = { path = "../../" }
 plotters = { version = "0.3", default_features = false, features = [
     "chrono",
