--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,10 +19,10 @@ members = [".", "examples/split-chart"]
 [dependencies]
 plotters = { version = "0.3", default_features = false }
 plotters-backend = "0.3"
-iced_native = { version = "0.6", git = "https://github.com/iced-rs/iced.git" }
+iced_native = { version = "0.6" }
 iced_graphics = { version = "0.4", features = [
     "canvas",
-], git = "https://github.com/iced-rs/iced.git" }
+] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 num-traits = "0.2"
@@ -38,10 +38,10 @@ plotters = { version = "0.3", default_features = false, features = [
     "line_series",
     "point_series",
 ] }
-iced = { version = "*", features = [
+iced = { version = "0.5", features = [
     "canvas",
     "tokio",
-], git = "https://github.com/iced-rs/iced.git" }
+] }
 chrono = { version = "0.4", default-features = false }
 rand = "0.8"
 tokio = { version = "1", features = ["rt"], default-features = false }
