--- a/examples/split-chart/Cargo.toml
+++ b/examples/split-chart/Cargo.toml
@@ -15,6 +15,9 @@ plotters = { version = "0.3", default_features = false, features = [
     "point_series",
 ] }
 
-[target.'cfg(target_arch = "wasm32")'.dependencies.iced]
-version = "0.12"
-features = ["webgl"]
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+iced.version = "0.12"
+iced.features = ["canvas", "debug", "webgl"]
+
+console_error_panic_hook = "0.1"
+console_log = "1.0"
